<resources>
    <string name="app_name">Weather App</string>
    <string name="title_current">Current</string>
    <string name="title_forecasts">Forecasts</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create Account</string>
    <string name="upload_your_image">Upload Your Image</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="i_m_already_a_member">I am already a member.</string>
    <string name="i_am_a_new_user">I am a New user.</string>
    <string name="or">Or</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city_name">City Name</string>
    <string name="use_fahrenheit_as_temp_unit">Use Fahrenheit as Temp Unit</string>
    <string name="settings_update">Update</string>
    <string name="preference_file_key">shared_settings_key</string>
    <string name="created_by_value">Emirhan</string>
    <string name="created_by_placeholder">Created By</string>

    <string-array name="days">
        <item>Select no. of days from the dropdown</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
</resources>