<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_current">

    <fragment
        android:id="@+id/navigation_current"
        android:name="com.example.weatherapp.ui.home.HomeFragment"
        android:label="@string/title_current"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_forecasts"
        android:name="com.example.weatherapp.ui.forecasts.ForecastsFragment"
        android:label="@string/title_forecasts"
        tools:layout="@layout/fragment_forecasts" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.weatherapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>