<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_weather"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/reg_edittext_style"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/city_name"
            android:fontFamily="@font/open_sans"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:checked="true"
        android:text="@string/use_fahrenheit_as_temp_unit"
        app:layout_constraintStart_toStartOf="@id/cityLabel"
        app:layout_constraintEnd_toEndOf="@id/cityLabel"
        app:layout_constraintTop_toBottomOf="@id/cityLabel"
        />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/days"
        app:layout_constraintStart_toStartOf="@id/cityLabel"
        app:layout_constraintEnd_toEndOf="@id/cityLabel"
        app:layout_constraintTop_toBottomOf="@id/switchUnit"
        />


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/sign_up_ripple"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/settings_update"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDays"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>